fix: code block in documentation pre wrap
(cherry picked from commit 9f9b7ce11a5d8247ee5fa173a4139e33f5e18b35)

--- a/gravitee-apim-portal-webui/src/app/components/gv-page-markdown/gv-page-markdown.component.css
+++ b/gravitee-apim-portal-webui/src/app/components/gv-page-markdown/gv-page-markdown.component.css
@@ -49,6 +49,9 @@
   max-width: 100%;
   display: inline;
   overflow: auto;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 app-gv-markdown-toc {
